--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">    
 </head>    
 <body>
- <main> 
+  <main> 
     <style>
         .flex-container{
             display: flex;
@@ -34,58 +34,63 @@
     </div> 
     <style>
     h4 {
-        font-size: 28px;
+        font-size: 22px;
+        height: 20px;
         justify-content: center;
         align-items: center;
         align-self: center;
+        margin-top: 0;
         color: blue;
-        background-color: yellow;
-        width: 1200px;
-        height: 75px;
-
-    }
-    </style>   
+         }
+    </style>     
       <div class="item-2">         
         <img src="Images/Be a Hero.jpg" alt="Lab"> 
      </div> 
       <div> 
              <h4>OUR MISSION</h4>   
      </div> 
-     <div class="container-2"></div>           
-      <div>
-        <p class="one"> 
+     <div class="equal-height-container">
+      <div class="first">
+        <div class="first-a">
+        <p> 
                 The Dallas Fort Worth Labrador Retriever Rescue Club,
             Inc. (DFWLR-RC) is dedicated to alleviating the needless
             death and suffering of home-less or misplaced (lost and 
             stray) purebred Labrador Retrievers in the Dallas Fort 
             Worth area.
-
+        </p>
+        <div class="first-b"> 
+        <p>
                 By rescuing and rehabilitating homeless Labradors in our 
             community, vigorously promoting responsible dog 
             ownership through active participation in pet-related 
             events, and through our own education program, we strive
             for a better life for each of our animals.
         </P>
-       </div>      
-      <div>
-        <p class="two">
+      </div> 
+    </div> 
+  </div> 
+      <div class="second">  
+      <div class="second-a">
+        <p>
                 We have events almost every week all over the DFW area
             so our labs can find their forever home. Our event calendar 
             always has the most up to date information for local Meet 
             & Greets and special events. Come out today, be a hero to
             a deserving lab, and find your best friend!
         </p>
-       </div>      
-      <div>
-        <p class="three">
+      </div>  
+      <div class="second-b">
+        <p>
                               See All Upcoming Events!
         </p>
-       </div>     
-      <div>
+      </div>    
+     </div>
+    </div> 
+    <div class="item-3">
               <h4>Get Involved</h4>     
-      </div>  
       </div>                  
-      <div>>
+      <div>
         <p class="four"> 
                  We are active in the DFW community and participate in fundraising and community outreach events, as well as Meet & Greets, therefore, not all events 
             will feature adoptable dogs. DFW Lab Rescue alumni are always welcome at our Meet & Greets and select other events. Please check our Event
@@ -93,34 +98,32 @@
              </p> 
       </div>
         <div class="item-8"></div>
-        <div id="image-box one">
-              <img src="Images/newmerch22.jpg" alt="Merchandise">            
-        </div> 
+            <img src="Images/newmerch22.jpg" alt="Merchandise">  
         <div class="item-9"></div>
-        <div id="image-box two">
-              <img src="Images/Backend_600x200.jpg" alt="Website">            
+            <img src="Images/Backend_600x200.jpg" alt="Website">            
         </div>
+        <div class="flex-container3">
         <div class="item-10"></div> 
-        <div id="image-box three">
-               <img src="Images/Top 10.jpg" alt="Top 10">
+            <img src="Images/Top 10.jpg" alt="Top 10">
         </div>        
-        <div class="item-11"></div>
+        <div class="item-11">
              <h4>CORPORATE MATCHING</h4>
+        </div>     
         <div>
              <p class="five">
                  Looking to save deserving labs and work for a company that matches donations? Below is a list of some of the companies in our area that match
             donations and will allow you to double your impact!
              </p>
           </div>     
-        <div class="item-13"></div>
-        <div id="image-box four">                     
-             <img src="Images/Matching.jpg" alt="CorpMatches">
+        <div class="flex-container4">
+        <div class="item-12"></div>
+            <img src="Images/Matching.jpg" alt="CorpMatches">
         </div>             
-        <div class="item-14"></div>
+        <div class="item-13"></div>
              <h4>ABOUT US</h4> 
+        <div class="flex-container5">   
         <div class="item-14"></div>
-        <div id="image-box five"> 
-            <img src="Images/Gold Transperancy.jpg" alt="Gold Logo">
+             <img src="Images/Gold Transperancy.jpg" alt="Gold Logo">
         </div>
         <div>
              <p class="six">   
@@ -133,27 +136,32 @@
             Some will take a few weeks to recover and some will take months. Our donors allow us to provide excellent care and rescue dogs that 
             otherwise would never receive that chance. 
              </p>   
-          </div>           
-        <div class="item-17"></div>         
-        <div id="image-box six">   
+          </div>   
+        <div class="flex-container6">      
+        <div class="item-15"></div>         
             <img src="Images/Bestofplano22.jpg" alt="Award">            
         </div>  
-        <div class="item-18"></div>
+        <div class="item-16">
              <h4>JOIN OUR MAILING LIST</h4>
-        <div class="item-19"></div>  
-             <h4>Dallas/ Fort Worth Labrador Retriever Rescue Club</h4>  
+        </div>  
+        <div class="item-17"></div>   
         <div>
-             <p class="eight">
+              <p class="eight">
+                Dallas / Fort Worth Labrador Retriever Rescue Club
+              </p>  
+        </div>       
+        <div>
+             <p class="nine">  
                 HOME | ABOUT | AVAILABLE DOGS | ADOPTED DOGS | SUCCESS STORIES | FORMS | DONATIONS / FUNDRAISING
              </p>
           </div>    
         <div>
-             <p class="nine">                
+             <p class="ten">                
                 LINKS | VETS | EVENTS | FOSTERING | VOLUNTEERING | CONTACT US
              </p>
           </div>      
         <div>
-             <p class="ten">
+             <p class="eleven">
                 Copyright 2013 Dallas / Fort Worth Labrador Retriever Rescue Club All Rights Reserved. 
              </p> 
         </div>                    
